kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pinger
  labels:
    app: pinger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinger
  template:
    metadata:
      labels:
        app: pinger
    spec:
      containers:
      - name: pinger
        image: quay.io/marian/pinger:latest
        args:
        - /etc/config/config.yaml
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        resources:
          limits:
            memory: 30Mi
      - name: redis
        image: redis:latest
        resources:
          limits:
            memory: 20Mi
      volumes:
      - name: config-volume
        configMap:
          name: pinger-config
          items:
          - key: config.yaml
            path: config.yaml
