kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pinger
  labels:
    app: pinger
spec:
  selector:
    app: pinger
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
