kubernetes/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pinger
  labels:
    app: pinger
spec:
  rules:
  - host: pinger.g5igw.k8s.gollum.westeurope.azure.gigantic.io
    http:
      paths:
      - path: /
        backend:
          serviceName: pinger
          servicePort: 8080
